--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "token": "NzI2NTg2NDYyNjQ0MDc2NTc1.Xvf68g.MNRZs1Jt3MmPPZNosf8962Yce6o",
+  "token": "NzI2NTg2NDYyNjQ0MDc2NTc1.Xvf9NQ.mqdITAQV5SrSVxz0OEIL-CE1pzQ",
   "prefix": "mass!",
   "id": "458019566824718347",
   "wait": "10"
